--- a/activities.html
+++ b/activities.html
@@ -122,7 +122,7 @@
             </li>
           </ul>
         </nav>
-        <nav class="mt-2" style="position: absolute; bottom:2%">
+        <nav class="mt-2" style="position: absolute; bottom:5%">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <li class="nav-item " id="nav-signout" onclick="signOut()">
               <a href="#logout" class="nav-link text-danger" id="nav-signout">
@@ -218,16 +218,16 @@
           <div class="dropdown" id="dropdown-main">
             <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
               id="land-name-filter" type="button">
-              ที่ดิน
+              --เลือกที่ดิน--
             </button>
             <div class="dropdown-menu" role="menu" id="land-dropdown">
-              <a class="dropdown-item" role="presentation" href="#"
-                onclick="setFilterValueOnclick('ที่ดิน','all')">ทั้งหมด</a>
              </div>
           </div>
+          <p style="color:red; display: none" id="modal-error-text">*กรุณาเลือกที่ดิน</p>
           <center>
             <button id="emer-ac-btn" type="button" class="btn bg-olive">&nbsp;เริ่มบันทึก&nbsp;</button>
           </center>
+
         </div>
 
       </div>
