--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
 
   <!-- PROPLANTE -->
   <link rel="stylesheet" href="build/css/allelements.css">
+  <link rel="stylesheet" href="build/css/MainPage.css">
+  <link rel="stylesheet" href="build/css/loader-1.css">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
   <div class="wrapper">
-
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light" id="topnav">
       <!-- Left navbar links -->
@@ -143,7 +145,7 @@
     <!-- /.navbar -->
 
     <!-- Main Sidebar Container -->
-    <aside class="main-sidebar sidebar-light-primary elevation-4">
+    <aside id="aside" class="main-sidebar sidebar-light-primary elevation-4">
       <!-- Brand Logo -->
       <a id="sidebar-brand-logo" href="index.html" class="brand-link">
         <table>
@@ -224,7 +226,7 @@
             </li>
           </ul>
         </nav>
-        <nav class="mt-2"  style="position: absolute; bottom:2%">
+        <nav class="mt-2"  style="position: absolute; bottom:5%">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview"
             role="menu" data-accordion="false">
             <li class="nav-item " id="nav-signout" onclick="signOut()">
@@ -265,6 +267,12 @@
         <!-- Control sidebar content goes here -->
       </aside>
       <!-- /.control-sidebar -->
+    </div>
+
+    <div id="bg-loading" style=" background-color: rgba(0, 0, 0, 1.0);">
+      <div class="loader-wrapper" id="loader-1">
+        <div id="loader"></div>
+      </div>
     </div>
     <!-- ./wrapper -->
     <script src="plugins/jquery/jquery.min.js"></script>
